# hungarianAlgorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: HungarianAlgorithm.h
src/: HungarianAlgorithm.cpp
